--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"db-conn": "^0.0.3",
+		"eval": "^0.1.4",
 		"sql.js": "^1.0.1"
 	},
 	"devDependencies": {
